use react hot bolster
use react hot bolster,and change some dir to src

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>HIKALU</title>
-  <!--<link rel="stylesheet" href="css/main.css" class="main">-->
+  <!-- <link rel="stylesheet" href="css/main.css" class="main"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
@@ -28,12 +28,11 @@
 
 <div class="hikalu clearfix">
   <h2>zgl</h2>
-  <p>22333333</p>
+  <p>HIKALU</p>
 </div>
 
 <footer></footer>
-<!-- <script type="text/babel" src="components/Test.js"></script> -->
-<!-- <script src="bundle.js"></script> -->
+
 <script src="/static/bundle.js"></script>
 </body>
 </html>
